# Y3-C

./: .gitignore  README.md
TD/Lab02/src/: CMakeLists.txt
TD/Lab03/lab03/: test.c
TD/Lab03/lab03/Lab03_homework/: CMakeLists.txt  main.c
TD/Lab04/lab04/: test.c
TD/Lab04/lab04/Lab04_homework/: CMakeLists.txt
TD/Lab04/stu/: Lab 4.html
TD/Lab04/stu/code/: CMakeLists.txt
TD/Lab07/: lab7.c  lab7_template.c
TD/lab01_code_student/lab01_code_student/lab01/: CMakeLists.txt  convert  convert.c  narcissistic.c
