cmake_minimum_required(VERSION 3.0)
project(Lab04_homework)
add_executable(task5 task5.c)
add_executable(task4_1 task4_1.c)
add_executable(task4_2 task4_2.c)
add_executable(task4_3 task4_3.c)
if(MSVC)
target_compile_options(task5 PRIVATE /W4)
else()
target_compile_options(task5 PRIVATE -Wall)
endif()